--- a/gdk/config/proj.config
+++ b/gdk/config/proj.config
@@ -23,6 +23,6 @@
 # directory         repo_name    branch  TAG         build
 - ../src/realtime   realtime    4.2     latest    src
 - ../src/er         er          4.2     latest    src
-x gsdk               local        ~      nightly   "./.gdk_fetch"  
+#x gsdk               local        ~      nightly   "./.gdk_fetch"  
 #x gsdk              kent        /gsdk_repo nightly "./.gdk_fetch"
-#x gsdk              mtv         /repos nightly "./.gdk_fetch"
+x gsdk              mtv         /repos nightly "./.gdk_fetch"
