[CST-237] mv repo config to ER

--- a/gdk/config/sdk_resource.cfg
+++ b/gdk/config/sdk_resource.cfg
@@ -1,5 +1,1 @@
-# This file lists the URL and account to fetch the SDK
-# myVar=$(grep -Po "(?<=^HereIsAKey ).*" file)
-kent: ftp://192.168.22.10/
-mtv:  ftp://192.168.11.10
-local: ../deploy_gsdk
+../../src/er/buildenv/sdk_resource.cfg
