copy token.so to pkg/bin

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -75,3 +75,4 @@ cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
 mkdir -p ${GSQL_PKG_HOME}/gsql
 cd  ${GSQL_PROJ_HOME}/gsql/src/TokenBank/; ./compile; cd -
 cp -RL ${GSQL_PROJ_HOME}/gsql/* ${GSQL_PKG_HOME}/gsql
+cp -RL ${GSQL_PROJ_HOME}/gsql/lib/*.so ${GSQL_PKG_HOME}/bin 2>/dev/null || :
