[GDK-1] add tutorial

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -76,3 +76,7 @@ mkdir -p ${GSQL_PKG_HOME}/gsql
 cd  ${GSQL_PROJ_HOME}/gsql/src/TokenBank/; ./compile; cd -
 cp -RL ${GSQL_PROJ_HOME}/gsql/* ${GSQL_PKG_HOME}/gsql
 cp -RL ${GSQL_PROJ_HOME}/gsql/lib/*.so ${GSQL_PKG_HOME}/bin 2>/dev/null || :
+
+# copy tutorial
+mkdir -p ${GSQL_PKG_HOME}/tutorial
+cp -RL ${GSQL_PROJ_HOME}/src/tutorial ${GSQL_PKG_HOME}/ 2>/dev/null || :
