--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -55,3 +55,6 @@ cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
 mkdir -p ${GSQL_PKG_HOME}/gsql
 cd  ${GSQL_PROJ_HOME}/gsql/src/TokenBank/; ./compile; cd -
 cp -RL ${GSQL_PROJ_HOME}/gsql/* ${GSQL_PKG_HOME}/gsql
+
+# tutorial
+cp -RL gsdk/tutorial ${GSQL_PKG_HOME}/ 2>/dev/null || :
