--- a/config/proj.config
+++ b/config/proj.config
@@ -19,3 +19,4 @@
 - src/realtime       realtime    4.2 latest    src
 - src/msg            msg_layer   master latest    src
 - src/er             er          4.2 latest    src
+- src/doc            document    master  latest    src
