--- a/config/pkg.config
+++ b/config/pkg.config
@@ -18,6 +18,7 @@
 #      all other case (none of either, has MULTIEDGETYPES only, or have both): multiple edge types
 # - ONLINEALIAS    (If alias in online request, all IDS servers need to look for it)
 # - GOOGLE_DENSEHASHMAP or GOOGLE_SPARSEHASHMAP: choose GOOGLE_SPARSEHASHMAP if IDS uses too much memory
+# - LICCHKFREQUENCE=10000: check license every 10000 UDFs/GSE_lookup. If 0 or not define, no check
 #----------------------------------------------------------------------------------------
 export GSQL_BUILD_SCONS="scons"
 export GSQL_BUILD_FLAGS="cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES,__STDC_FORMAT_MACROS"
