--- a/gsql/config
+++ b/gsql/config
@@ -4,17 +4,19 @@
 
 # To generate visiualization of the graph schema in pdf format, you need to install graphviz (http://www.graphviz.org/) 
 # on your system, then use "which dot" to find "dot" path, and set the DotDir property like below 
-# e.g. DotDir=/usr/bin/
+DotDir=/usr/bin/
 
 
 # IUM will create this
 CanonnicalLoader=../build/release/olgp/gse/gse_canonnical_loader 
 
+#IUM will create this
+BatchDeltaBinary=../build/release/olgp/tools/batchdelta
 
 # IUM will create this
 GSELoaderConfig=/data/rc4/config/gse_loader/gse_loader1.conf
 
 # IUM generate this.
 # This is tokenUDF string->string function's output buffer size
-OutputTokenBufferSize=2000
+OutputTokenBufferSize=50000
 
