--- a/src/unittests/SConscript
+++ b/src/unittests/SConscript
@@ -8,6 +8,8 @@ src_files = Split("""
                     distributed/dist_basic.cpp
                     dqss/dqss_basic.cpp
                     perf/threadpool_test.cpp
+                    perf/functioncall.cpp
+                    perf/functioncall_test.cpp
                     unit_main.cpp
                     gpe4/test_gpe4_udf.cpp
                     gpe4/test_topology_delta.cpp
