--- a/config/pkg.config
+++ b/config/pkg.config
@@ -25,6 +25,7 @@ echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
 ${GSQL_BUILD_SCONS} poc_gpe_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} gse2_release     ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} poc_rest_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_gse_canonnical_loader_release ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} graphdump_release ${GSQL_BUILD_FLAGS}
@@ -42,6 +43,7 @@ cp build/release/customer/core_impl/gpe_impl/poc_gpe_server  ${GSQL_PKG_HOME}/bi
 cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin/gse_dump
+cp build/release/realtime/restpp/poc_rest_server  ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_canonnical_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
