--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ gsql/output
 gtest/diff/*
 gtest/output/*
 gtest/.working_dir
+ptest/diff/*
+ptest/output/*
+ptest/.working_dir
 
 # gdk generated
 deploy_gsdk/
