[REQUEST-27] include nginx in pkg

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -50,6 +50,7 @@ cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/tools/batchdelta ${GSQL_PKG_HOME}/bin
 
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
+cp -RL ${THIRD_PARTY_HOME}/nginx ${GSQL_PKG_HOME}/third-party-pkgs/ 2>/dev/null || :
 ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 
 # to streamline a new deployment, we'll also copy configs and scripts to mgnt_cli
