--- a/gdk/config/proj.config
+++ b/gdk/config/proj.config
@@ -24,5 +24,5 @@
 - ../src/realtime   realtime    4.2     latest    src
 - ../src/er         er          4.2     latest    src
 #x gsdk               local        ~      nightly   "./.gdk_fetch"  
-#x gsdk             kent        /repos nightly "./.gdk_fetch"
-x gsdk              mtv         /repos nightly "./.gdk_fetch"
+x gsdk             kent        /repos nightly "./.gdk_fetch"
+#x gsdk              mtv         /repos nightly "./.gdk_fetch"
