--- a/src/customer/core_impl/gsql_impl/graph_config.yaml
+++ b/src/customer/core_impl/gsql_impl/graph_config.yaml
@@ -30,6 +30,7 @@ VertexTypes:
     Nullable: false
   VertexId: 0
   VertexName: vtype0
+  StartId: 100
 - Attributes: 
   - AttributeName: v1_a1
     AttributeType: BOOL
