--- a/nginx_conf/conf/nginx.conf
+++ b/nginx_conf/conf/nginx.conf
@@ -1,5 +1,6 @@
 #perfix is /home/shawn.huang/product/nginx_conf/
-# nginx -p /home/shawn.huang/product/nginx_conf/
+#nginx -p /home/shawn.huang/product/nginx_conf/
+#nginx -c /home/shawn.huang/product/nginx_conf/conf/nginx.conf
 
 worker_processes 4;
 pid /home/shawn.huang/product/nginx_conf/logs/nginx.pid;
