--- a/gsql/config
+++ b/gsql/config
@@ -9,15 +9,15 @@ DotDir=/usr/bin/
 
 # IUM will create this
 #CanonnicalLoader=../build/release/olgp/gse/gse_canonnical_loader 
-CanonnicalLoader=/home/alan.lee/product/deploy_pkg/bin/gse_canonnical_loader
+CanonnicalLoader=../deploy_pkg/bin/gse_canonnical_loader
 
 #IUM will create this
 #BatchDeltaBinary=../build/release/olgp/tools/batchdelta
-BatchDeltaBinary=/home/alan.lee/product/deploy_pkg/bin/batchdelta
+BatchDeltaBinary=../deploy_pkg/bin/batchdelta
 
 # IUM will create this
 #GSELoaderConfig=/data/rc4/config/gse_loader/gse_loader1.conf
-GSELoaderConfig=/home/alan.lee/graphsql/config/gse_loader/gse_loader1.conf
+GSELoaderConfig=../../graphsql/config/gse_loader/gse_loader1.conf
 
 # IUM generate this.
 # This is tokenUDF string->string function's output buffer size
