update pkg.config for restpp

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -49,6 +49,11 @@ cp build/release/olgp/gse/generic_batch_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/tools/batchdelta ${GSQL_PKG_HOME}/bin
 
+# RESTPP related stuff
+cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean; make opt; cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
+cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/endpoints
+
+
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
 cp -RL ${THIRD_PARTY_HOME}/nginx ${GSQL_PKG_HOME}/third-party-pkgs/ 2>/dev/null || :
 ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
