Setting up LianLian visualization.

--- a/gsql/config
+++ b/gsql/config
@@ -8,13 +8,15 @@ DotDir=/usr/bin/
 
 
 # IUM will create this
-CanonnicalLoader=../build/release/olgp/gse/gse_canonnical_loader 
+#CanonnicalLoader=../build/release/olgp/gse/gse_canonnical_loader 
+CanonnicalLoader=../deploy_pkg/bin/gse_canonnical_loader
 
 #IUM will create this
-BatchDeltaBinary=../build/release/olgp/tools/batchdelta
+#BatchDeltaBinary=../build/release/olgp/tools/batchdelta
+BatchDeltaBinary=../deploy_pkg/bin/batchdelta
 
 # IUM will create this
-GSELoaderConfig=/home/ec2-user/graphsql/config/gse_loader/gse_loader1.conf
+GSELoaderConfig=/home/shawn.huang/graphsql/config/gse_loader/gse_loader1.conf
 
 # IUM generate this.
 # This is tokenUDF string->string function's output buffer size
