remove old rest from gpkg

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -58,7 +58,7 @@ cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config
 
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
 cp -RL ${THIRD_PARTY_HOME}/nginx ${GSQL_PKG_HOME}/third-party-pkgs/ 2>/dev/null || :
-${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
+#${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 
 # to streamline a new deployment, we'll also copy configs and scripts to mgnt_cli
 mkdir -p ${GSQL_PKG_HOME}/config
