--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -39,6 +39,7 @@ ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 # to streamline a new deployment, copy configs
 mkdir -p ${GSQL_PKG_HOME}/config
 cp -RL ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/config
+cp -RL ${GSQL_PROJ_HOME}/src/customer/core_impl/gsql_impl/loading_job ${GSQL_PKG_HOME}/config
 
 mkdir -p ${GSQL_PKG_HOME}/scripts
 cp -RL ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
