--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -21,6 +21,13 @@
 #----------------------------------------------------------------------------------------
 #export GSQL_BUILD_FLAGS="cb=1 --CPPDEFINES=_STDC_FORMAT_MACROS"
 #echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
+Da=$(grep CPPDEFINES= ../config/pkg.config)
+Db=${Da/*=/}
+Dc=${Db%\\\"}
+Dd=${Dc//,/ }
+CFLAGS=
+for d in $Dd ;do CFLAGS="$CFLAGS -D$d"; done
+export CFLAGS
 make -f MakeGPE clean
 make -f MakeGPE
 
@@ -56,3 +63,7 @@ cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
 mkdir -p ${GSQL_PKG_HOME}/gsql
 cd  ${GSQL_PROJ_HOME}/gsql/src/TokenBank/; ./compile; cd -
 cp -RL ${GSQL_PROJ_HOME}/gsql/* ${GSQL_PKG_HOME}/gsql
+cp -RL ${GSQL_PROJ_HOME}/gsql/lib/*.so ${GSQL_PKG_HOME}/bin 2>/dev/null || :
+
+# tutorial
+cp -RL gsdk/tutorial ${GSQL_PKG_HOME}/ 2>/dev/null || :
