[IUM-32] fix gdk config

--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -19,8 +19,8 @@
 # - ONLINEALIAS    (If alias in online request, all IDS servers need to look for it)
 # - GOOGLE_DENSEHASHMAP or GOOGLE_SPARSEHASHMAP: choose GOOGLE_SPARSEHASHMAP if IDS uses too much memory
 #----------------------------------------------------------------------------------------
-#export GSQL_BUILD_FLAGS="cb=1 --CPPDEFINES=_STDC_FORMAT_MACROS"
-#echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
+export GSQL_BUILD_SCONS="scons"
+export GSQL_BUILD_FLAGS="--CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES,__STDC_FORMAT_MACROS"
 Da=$(grep CPPDEFINES= ../config/pkg.config)
 Db=${Da/*=/}
 Dc=${Db%\\\"}
@@ -36,12 +36,21 @@ make -f MakeGPE
 # No need to change below in most cases                                               #
 #                                                                                     #
 #######################################################################################
+# RESTPP related stuff
+PARENT=$PWD
+cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean; make opt; cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
+cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/endpoints
+
+cd ${GSQL_PROJ_HOME}; ${GSQL_BUILD_SCONS} poc_rest_release  ${GSQL_BUILD_FLAGS}
+cp ${GSQL_PROJ_HOME}/build/release/realtime/restpp/poc_rest_server  ${GSQL_PKG_HOME}/bin
+
+cd  ${PARENT}
+
 mkdir -p ${GSQL_PKG_HOME}/bin
 cp -RL gsdk/bin/release/* ${GSQL_PKG_HOME}/bin
 cp -RL bin/release/* ${GSQL_PKG_HOME}/bin
 
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
-${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 
 # to streamline a new deployment, copy configs
 mkdir -p ${GSQL_PKG_HOME}/config
