--- a/nginx_conf/conf/nginx.conf
+++ b/nginx_conf/conf/nginx.conf
@@ -1,45 +1,43 @@
-#perfix is /home/shawn.huang/product/nginx_conf/
-#nginx -p /home/shawn.huang/product/nginx_conf/
-#nginx -c /home/shawn.huang/product/nginx_conf/conf/nginx.conf
-
 worker_processes 4;
-pid /home/shawn.huang/product/nginx_conf/logs/nginx.pid;
-error_log /home/shawn.huang/product/nginx_conf/logs/error.log;
-
+pid ../nginx_conf/logs/nginx.pid;
+error_log ../nginx_conf/logs/error.log;
+# exampleuser : exampleuser!@#$
+#auth_basic "Restricted";
+#auth_basic_user_file ../conf/.htpasswd;
 
 events {
-	worker_connections 1024;
+  worker_connections 1024;
 }
 
 
 http {
-	access_log /home/shawn.huang/product/nginx_conf/logs/access.log;
-	include mime.types; # "pwd" as prefix
-	default_type application/octet-stream;
-	server {
-		listen 8080;
+  access_log ../nginx_conf/logs/access.log;
+  include mime.types;
+  default_type application/octet-stream;
+  server {
+    listen 8080;
 
-		location / {
-			root  /home/shawn.huang/product/www; 
-		}
-		location /1.1 {
-			root /home/shawn.huang/product/graphAPI;
-		}
-
-		location /engine/ {
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			proxy_set_header Host $http_host;
-			proxy_set_header X-NginX-Proxy true;
-			proxy_pass http://localhost:9000/;
-			proxy_redirect off;
-		}
-	}
+    location / {
+      root  ../www; 
 
 
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
+      
+    }
+
+    location /engine/ {
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-NginX-Proxy true;
+      proxy_pass http://localhost:9000/;
+      proxy_redirect off;
+    }
+  }
+
+
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  keepalive_timeout 65;
+  types_hash_max_size 2048;
 }
