[GS-1] don't include any gsql so

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -78,6 +78,5 @@ cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
 
 # copy gsql DDL
 mkdir -p ${GSQL_PKG_HOME}/gsql
-cd  ${GSQL_PROJ_HOME}/gsql/src/TokenBank/; ./compile; cd -
+rm -rf ${GSQL_PROJ_HOME}/gsql/lib/*.so
 cp -RL ${GSQL_PROJ_HOME}/gsql/* ${GSQL_PKG_HOME}/gsql
-cp -RL ${GSQL_PROJ_HOME}/gsql/lib/*.so ${GSQL_PKG_HOME}/bin 2>/dev/null || :
