--- a/config/pkg.config
+++ b/config/pkg.config
@@ -22,15 +22,18 @@
 export GSQL_BUILD_SCONS="scons"
 export GSQL_BUILD_FLAGS="--CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES,__STDC_FORMAT_MACROS"
 echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
+mkdir -p ${GSQL_PKG_HOME}/bin
+
 ${GSQL_BUILD_SCONS} poc_gpe_release  ${GSQL_BUILD_FLAGS}
-${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} gse2_release     ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} generic_batch_loader_release ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} gsql_data_generator_release ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_rest_release  ${GSQL_BUILD_FLAGS}
-${GSQL_BUILD_SCONS} graphdump_release ${GSQL_BUILD_FLAGS}
-${GSQL_BUILD_SCONS} batchdelta_release ${GSQL_BUILD_FLAGS}
+# ${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS};cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
+# ${GSQL_BUILD_SCONS} graphdump_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
+# ${GSQL_BUILD_SCONS} batchdelta_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/batchdelta ${GSQL_PKG_HOME}/bin
+# ${GSQL_BUILD_SCONS} schemaupdate_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/schemaupdate ${GSQL_PKG_HOME}/bin
 
 
 #######################################################################################
@@ -41,15 +44,13 @@ ${GSQL_BUILD_SCONS} batchdelta_release ${GSQL_BUILD_FLAGS}
 #######################################################################################
 mkdir -p ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_impl/gpe_impl/poc_gpe_server  ${GSQL_PKG_HOME}/bin
-cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin/gse_dump
 cp build/release/realtime/restpp/poc_rest_server  ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/generic_batch_loader ${GSQL_PKG_HOME}/bin
 cp build/release/utility/tools/data_gen/gsql_data_generator ${GSQL_PKG_HOME}/bin
-cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
-cp build/release/olgp/tools/batchdelta ${GSQL_PKG_HOME}/bin
+
 
 # RESTPP related stuff
 cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean; make opt; cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
