--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -40,9 +40,10 @@ make -f MakeGPE
 PARENT=$PWD
 cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean; make opt; cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
 cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/endpoints
+cd  ${PARENT}
 
-cd ${GSQL_PROJ_HOME}; ${GSQL_BUILD_SCONS} poc_rest_release  ${GSQL_BUILD_FLAGS}
-cp ${GSQL_PROJ_HOME}/build/release/realtime/restpp/poc_rest_server  ${GSQL_PKG_HOME}/bin
+make -f MakeREST clean
+make -f MakeREST
 
 cd  ${PARENT}
 
