--- a/src/customer/core_impl/gsql_impl/graph_config.yaml
+++ b/src/customer/core_impl/gsql_impl/graph_config.yaml
@@ -5,6 +5,9 @@ EdgeTypes:
     AttributeType: STRING
   EdgeId: 0
   FromVertexTypeName: person
+  InitVersionAttributes: 
+  - AttributeName: role
+    AttributeType: STRING
   IsDirected: true
   Name: roles
   ToVertexTypeName: movie
@@ -14,6 +17,9 @@ GraphName: person_movie
 SegSizeInBits: 20
 VertexTypes: 
 - Attributes: 
+  - AttributeName: name
+    AttributeType: STRING
+  InitVersionAttributes: 
   - AttributeName: name
     AttributeType: STRING
   Name: person
@@ -31,6 +37,14 @@ VertexTypes:
   - AttributeName: country
     AttributeType: UINT
     Enumerator: 1
+  - AttributeName: year
+    AttributeType: UINT
+  InitVersionAttributes: 
+  - AttributeName: title
+    AttributeType: STRING
+  - AttributeName: country
+    AttributeType: UINT
+    Enumerator: 2147483647
   - AttributeName: year
     AttributeType: UINT
   Name: movie
