[GTF-2] Add bigtest to proj.config

--- a/config/proj.config
+++ b/config/proj.config
@@ -20,3 +20,4 @@
 - src/msg            msg_layer   master latest    src
 - src/er             er          4.2 latest    src
 - src/gle             gle          4.3 latest    src
+- bigtest            bigtest     master latest    src
