[GDK-6] add filterutil.cpp

--- a/src/customer/restpp_impl/filter_impl/Makefile
+++ b/src/customer/restpp_impl/filter_impl/Makefile
@@ -2,11 +2,18 @@ CC=g++
 CFLAGS=-c -w -lstdc++ -fPIC
 LIB_NAME=filters
 LDFLAGS=-lstdc++ -shared
-INCLUDE=-I$(GSQL_PROJ_HOME)/src/third_party/jsoncpp/include -I$(GSQL_PROJ_HOME)/src/realtime/
+ifeq ($(wildcard file1),)
+    JSON_PATH = $(GSQL_PROJ_HOME)/gdk/gsdk/include/third_party/jsoncpp
+else
+   JSON_PATH =  $(GSQL_PROJ_HOME)/src/third_party/jsoncpp
+endif
+INCLUDE=-I$(JSON_PATH)/include -I$(GSQL_PROJ_HOME)/src/realtime/
+SYS_SRC=$(JSON_PATH)/json_reader.cpp $(JSON_PATH)/json_writer.cpp $(JSON_PATH)/json_value.cpp ../filterutil.cpp
 SOURCES=$(wildcard *.cpp)
-OBJECTS=$(SOURCES:.cpp=.o)
+OBJECTS=$(SOURCES:.cpp=.o) $(SYS_SRC:.cpp=.o)
 EXECUTABLE=$(LIB_NAME).so
-all: $(SOURCES) $(EXECUTABLE)
+
+all: $(SOURCES) $(SYS_SRC) $(EXECUTABLE)
 
 debug: CC += -g
 debug: $(EXECUTABLE)
@@ -22,4 +29,4 @@ $(EXECUTABLE): $(OBJECTS)
 
 
 clean:
-		rm -rf *.o *.so
+		rm -rf *.o *.so $(JSON_PATH)/json_reader.o $(JSON_PATH)/json_writer.o $(JSON_PATH)/json_value.o
