--- a/config/pkg.config
+++ b/config/pkg.config
@@ -80,4 +80,4 @@ cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
 # copy gsql DDL
 mkdir -p ${GSQL_PKG_HOME}/gsql
 rm -rf ${GSQL_PROJ_HOME}/gsql/lib/*.so
-cp -RL ${GSQL_PROJ_HOME}/gsql/* ${GSQL_PKG_HOME}/gsql
+cp -RL ${GSQL_PROJ_HOME}/gsql/* ${GSQL_PKG_HOME}/gsql 2>/dev/null || :
