[GDK-6] move filterutil to header

--- a/src/customer/restpp_impl/filter_impl/Makefile
+++ b/src/customer/restpp_impl/filter_impl/Makefile
@@ -8,7 +8,7 @@ else
    JSON_PATH =  $(GSQL_PROJ_HOME)/src/third_party/jsoncpp
 endif
 INCLUDE=-I$(JSON_PATH)/include -I$(GSQL_PROJ_HOME)/src/realtime/
-SYS_SRC=$(JSON_PATH)/json_reader.cpp $(JSON_PATH)/json_writer.cpp $(JSON_PATH)/json_value.cpp ../filterutil.cpp
+SYS_SRC=$(JSON_PATH)/json_reader.cpp $(JSON_PATH)/json_writer.cpp $(JSON_PATH)/json_value.cpp
 SOURCES=$(wildcard *.cpp)
 OBJECTS=$(SOURCES:.cpp=.o) $(SYS_SRC:.cpp=.o)
 EXECUTABLE=$(LIB_NAME).so
