[GDK-6] update Makefile

--- a/src/customer/restpp_impl/filter_impl/Makefile
+++ b/src/customer/restpp_impl/filter_impl/Makefile
@@ -3,13 +3,15 @@ CFLAGS=-c -w -lstdc++ -fPIC
 LIB_NAME=filters
 LDFLAGS=-lstdc++ -shared
 ifeq ($(wildcard file1),)
-    JSON_PATH = $(GSQL_PROJ_HOME)/gdk/gsdk/include/third_party/jsoncpp
+	JSON_PATH = $(GSQL_PROJ_HOME)/gdk/gsdk/include/third_party/jsoncpp
+	RESTPP_PATH = $(GSQL_PROJ_HOME)/src/realtime/restpp
 else
-   JSON_PATH =  $(GSQL_PROJ_HOME)/src/third_party/jsoncpp
+	JSON_PATH =  $(GSQL_PROJ_HOME)/src/third_party/jsoncpp
+	RESTPP_PATH = $(GSQL_PROJ_HOME)/gdk/gsdk/include/realtime/restpp
 endif
 INCLUDE=-I$(JSON_PATH)/include -I$(GSQL_PROJ_HOME)/src/realtime/
 SYS_SRC=$(JSON_PATH)/json_reader.cpp $(JSON_PATH)/json_writer.cpp $(JSON_PATH)/json_value.cpp
-SOURCES=$(wildcard *.cpp)
+SOURCES=$(wildcard *.cpp) $(RESTPP_PATH)/idset.cpp $(RESTPP_PATH)/schemamanager.cpp
 OBJECTS=$(SOURCES:.cpp=.o) $(SYS_SRC:.cpp=.o)
 EXECUTABLE=$(LIB_NAME).so
 
