Add visualization into package.

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -51,6 +51,9 @@ cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/generic_batch_loader ${GSQL_PKG_HOME}/bin
 cp build/release/utility/tools/data_gen/gsql_data_generator ${GSQL_PKG_HOME}/bin
 
+# Visualization
+cp -r src/visualization ${GSQL_PKG_HOME}/visualization
+
 
 # RESTPP related stuff
 cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean; make opt; cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
