[GSDK-6] bug fix for filter makefile

--- a/src/customer/restpp_impl/filter_impl/Makefile
+++ b/src/customer/restpp_impl/filter_impl/Makefile
@@ -2,12 +2,12 @@ CC=g++
 CFLAGS=-c -w -lstdc++ -fPIC
 LIB_NAME=filters
 LDFLAGS=-lstdc++ -shared
-ifeq ($(wildcard file1),)
+ifneq "$(wildcard $(GSQL_PROJ_HOME)/gdk/gsdk/include/third_party/jsoncpp )" ""
 	JSON_PATH = $(GSQL_PROJ_HOME)/gdk/gsdk/include/third_party/jsoncpp
-	RESTPP_PATH = $(GSQL_PROJ_HOME)/src/realtime/restpp
+	RESTPP_PATH = $(GSQL_PROJ_HOME)/gdk/gsdk/include/realtime/restpp
 else
 	JSON_PATH =  $(GSQL_PROJ_HOME)/src/third_party/jsoncpp
-	RESTPP_PATH = $(GSQL_PROJ_HOME)/gdk/gsdk/include/realtime/restpp
+	RESTPP_PATH = $(GSQL_PROJ_HOME)/src/realtime/restpp
 endif
 INCLUDE=-I$(JSON_PATH)/include -I$(GSQL_PROJ_HOME)/src/realtime/
 SYS_SRC=$(JSON_PATH)/json_reader.cpp $(JSON_PATH)/json_writer.cpp $(JSON_PATH)/json_value.cpp
@@ -31,4 +31,4 @@ $(EXECUTABLE): $(OBJECTS)
 
 
 clean:
-		rm -rf *.o *.so $(JSON_PATH)/json_reader.o $(JSON_PATH)/json_writer.o $(JSON_PATH)/json_value.o
+		rm -rf *.o *.so $(JSON_PATH)/json_reader.o $(JSON_PATH)/json_writer.o $(JSON_PATH)/json_value.o $(RESTPP_PATH)/idset.o $(RESTPP_PATH)/schemamanager.o
