change nginx conf

--- a/src/visualization/nginx_conf/nginx_visualization.conf
+++ b/src/visualization/nginx_conf/nginx_visualization.conf
@@ -1,6 +1,6 @@
 worker_processes 4;
-pid ../nginx_conf/nginx.pid;
-error_log ../nginx_conf/error.log;
+pid ../nginx.pid;
+error_log ./visualization_error.log;
 
 events {
   worker_connections 1024;
@@ -8,13 +8,13 @@ events {
 
 
 http {
-  access_log ../nginx_conf/access.log;
+  access_log ./visualization_access.log;
   default_type application/octet-stream;
   server {
     listen 8080;
 
     location / {
-      root  ../www; 
+      root  ../visualization/www; 
     }
 
     location /engine/ {
