--- a/src/visualization/nginx_conf/nginx_visualization.conf
+++ b/src/visualization/nginx_conf/nginx_visualization.conf
@@ -1,6 +1,7 @@
 worker_processes 4;
-pid ../nginx.pid;
+pid ./visualization_nginx.pid;
 error_log ./visualization_error.log;
+access_log ./visualization_access.log;
 
 events {
   worker_connections 1024;
@@ -8,8 +9,9 @@ events {
 
 
 http {
-  access_log ./visualization_access.log;
+  include mime.types;
   default_type application/octet-stream;
+  
   server {
     listen 8080;
 
