--- a/src/visualization/nginx_visualization.conf
+++ b/src/visualization/nginx_visualization.conf
@@ -1,7 +1,6 @@
 worker_processes 4;
 pid ./visualization_nginx.pid;
 error_log ./visualization_error.log;
-access_log ./visualization_access.log;
 
 events {
   worker_connections 1024;
@@ -9,6 +8,7 @@ events {
 
 
 http {
+  access_log ./visualization_access.log;
   include mime.types;
   default_type application/octet-stream;
   
@@ -16,7 +16,7 @@ http {
     listen 8080;
 
     location / {
-      root  ../visualization/www; 
+      root  www; 
     }
 
     location /engine/ {
