[GDK-7] - Build gdk according to build flags and OS

--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -21,10 +21,8 @@
 #----------------------------------------------------------------------------------------
 export GSQL_BUILD_SCONS="scons"
 export GSQL_BUILD_FLAGS="--CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES,__STDC_FORMAT_MACROS"
-Da=$(grep CPPDEFINES= ../config/pkg.config)
-Db=${Da/*=/}
-Dc=${Db%\\\"}
-Dd=${Dc//,/ }
+Da=$(grep CPPDEFINES= ${GSQL_PROJ_HOME}/config/pkg.config|sed -e '/#/d'  -e 's/.*--CPPDEFINES=\(.*\)"$/\1/')
+Dd=${Da//,/ }
 CFLAGS=
 for d in $Dd ;do CFLAGS="$CFLAGS -D$d"; done
 export CFLAGS
