Changed er branch er-gdk

--- a/config/proj.config
+++ b/config/proj.config
@@ -18,6 +18,6 @@
 - src/utility        utility     4.3 latest    src
 - src/realtime       realtime    4.3 latest    src
 - src/msg            msg_layer   master latest    src
-- src/er             er          4.3 latest    src
+- src/er             er          4.3_gdk latest    src
 - src/gle             gle          4.3 latest    src
 - bigtest            bigtest     master latest    src
