--- a/gdk/config/proj.config
+++ b/gdk/config/proj.config
@@ -21,8 +21,8 @@
 #     to local gsdk dir                               # 
 #######################################################
 # directory         repo_name    branch  TAG         build
-#- ../src/realtime   realtime    4.3     latest    src
-- ../src/er          er          4.3     latest    src
+- ../src/realtime   realtime    4.3     latest    src
+- ../src/er          er          4.3_gdk     latest    src
 x gsdk               local       ~      nightly   "./.gdk_fetch"
 #x gsdk              kent        /4.3/repos nightly "./.gdk_fetch"
 #x gsdk              mtv        /4.3/repos nightly "./.gdk_fetch"
