[ER-48] Remove MULTIEDGETYPES,__STDC_FORMAT_MACROS

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -20,7 +20,7 @@
 # - GOOGLE_DENSEHASHMAP or GOOGLE_SPARSEHASHMAP: choose GOOGLE_SPARSEHASHMAP if IDS uses too much memory
 #----------------------------------------------------------------------------------------
 export GSQL_BUILD_SCONS="scons"
-export GSQL_BUILD_FLAGS="--CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES,__STDC_FORMAT_MACROS"
+export GSQL_BUILD_FLAGS="--CPPDEFINES=GOOGLE_DENSEHASHMAP"
 echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
 mkdir -p ${GSQL_PKG_HOME}/bin
 
