[GDK-7] check out er 4.3 instead of 4.3_gdk

--- a/gdk/config/proj.config
+++ b/gdk/config/proj.config
@@ -22,8 +22,8 @@
 #######################################################
 # directory         repo_name    branch  TAG         build
 - ../src/realtime   realtime    4.3     latest    src
-- ../src/er          er          4.3_gdk     latest    src
-x gsdk               local       ~      nightly   "./.gdk_fetch"
-#x gsdk              kent        /4.3/repos nightly "./.gdk_fetch"
+- ../src/er          er         4.3     latest    src
+x gsdk               local      ~      nightly   "./.gdk_fetch"
+#x gsdk              kent       /4.3/repos nightly "./.gdk_fetch"
 #x gsdk              mtv        /4.3/repos nightly "./.gdk_fetch"
-#x gsdk              shanghai        /4.3/repos nightly "./.gdk_fetch"
+#x gsdk              shanghai   /4.3/repos nightly "./.gdk_fetch"
