[GSDK-21] temp fix of gpkg cleanup issue

--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -31,6 +31,9 @@ export CFLAGS
 make -f MakeGPE clean
 make -f MakeGPE
 
+mkdir -p ${GSQL_PKG_HOME}/bin
+cp -RL bin/release/* ${GSQL_PKG_HOME}/bin
+
 #######################################################################################
 #                                                                                     #
 # No need to change below in most cases                                               #
