[GI-40] Add statushubcli to package.

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -30,6 +30,7 @@ ${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} generic_batch_loader_release ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} gsql_data_generator_release ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_rest_release  ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} statushubcli_release ${GSQL_BUILD_FLAGS}
 # ${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS};cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
 # ${GSQL_BUILD_SCONS} graphdump_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
 # ${GSQL_BUILD_SCONS} batchdelta_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/batchdelta ${GSQL_PKG_HOME}/bin
@@ -48,6 +49,7 @@ cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin/gse_dump
 cp build/release/customer/restpp_impl/poc_rest_server  ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
+cp build/release/olgp/tools/statushubcli ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/generic_batch_loader ${GSQL_PKG_HOME}/bin
 cp build/release/utility/tools/data_gen/gsql_data_generator ${GSQL_PKG_HOME}/bin
 
