[RT-147] restpp jvm integration

--- a/config/proj.config
+++ b/config/proj.config
@@ -16,8 +16,8 @@
 - src/core/gse       gse         4.3 latest    src
 - src/third_party    third_party master latest    src
 - src/utility        utility     4.3 latest    src
-- src/realtime       realtime    4.3 latest    src
+- src/realtime       realtime    4.3_gpath latest    src
 - src/msg            msg_layer   master latest    src
-- src/er             er          4.3 latest    src
+- src/er             er          4.3_gpath latest    src
 - src/gle            gle         4.3.1 latest    src
 - bigtest            bigtest     master latest    src
