--- a/config/pkg.config
+++ b/config/pkg.config
@@ -24,17 +24,21 @@ export GSQL_BUILD_FLAGS="--CPPDEFINES=GOOGLE_DENSEHASHMAP"
 echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
 mkdir -p ${GSQL_PKG_HOME}/bin
 
-${GSQL_BUILD_SCONS} poc_gpe_release  ${GSQL_BUILD_FLAGS}
-${GSQL_BUILD_SCONS} gse2_release     ${GSQL_BUILD_FLAGS}
-${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
-${GSQL_BUILD_SCONS} generic_batch_loader_release ${GSQL_BUILD_FLAGS}
-${GSQL_BUILD_SCONS} gsql_data_generator_release ${GSQL_BUILD_FLAGS}
-${GSQL_BUILD_SCONS} poc_rest_release  ${GSQL_BUILD_FLAGS}
-${GSQL_BUILD_SCONS} statushubcli_release ${GSQL_BUILD_FLAGS}
+#${GSQL_BUILD_SCONS} poc_gpe_release  ${GSQL_BUILD_FLAGS}
+#${GSQL_BUILD_SCONS} gse2_release     ${GSQL_BUILD_FLAGS}
+#${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
+#${GSQL_BUILD_SCONS} generic_batch_loader_release ${GSQL_BUILD_FLAGS}
+#${GSQL_BUILD_SCONS} gsql_data_generator_release ${GSQL_BUILD_FLAGS}
+#${GSQL_BUILD_SCONS} poc_rest_release  ${GSQL_BUILD_FLAGS}
+#${GSQL_BUILD_SCONS} statushubcli_release ${GSQL_BUILD_FLAGS}
 # ${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS};cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
 # ${GSQL_BUILD_SCONS} graphdump_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
 # ${GSQL_BUILD_SCONS} batchdelta_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/batchdelta ${GSQL_PKG_HOME}/bin
 # ${GSQL_BUILD_SCONS} schemaupdate_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/schemaupdate ${GSQL_PKG_HOME}/bin
+
+#compile gpath
+bash src/gpath/gsql_compile_gpath.sh ${GSQL_PROJ_HOME}/src
+
 
 
 #######################################################################################
@@ -55,6 +59,10 @@ cp build/release/utility/tools/data_gen/gsql_data_generator ${GSQL_PKG_HOME}/bin
 
 # Visualization
 cp -r src/visualization ${GSQL_PKG_HOME}/visualization
+
+# Copy gpath jars
+cp -r src/gpath/jar_folders/*.jar ${GSQL_PKG_HOME}/bin
+cp -r src/gpath/libs/*.jar ${GSQL_PKG_HOME}/bin
 
 
 # RESTPP related stuff
