--- a/config/pkg.config
+++ b/config/pkg.config
@@ -24,13 +24,13 @@ export GSQL_BUILD_FLAGS="--CPPDEFINES=GOOGLE_DENSEHASHMAP"
 echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
 mkdir -p ${GSQL_PKG_HOME}/bin
 
-#${GSQL_BUILD_SCONS} poc_gpe_release  ${GSQL_BUILD_FLAGS}
-#${GSQL_BUILD_SCONS} gse2_release     ${GSQL_BUILD_FLAGS}
-#${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
-#${GSQL_BUILD_SCONS} generic_batch_loader_release ${GSQL_BUILD_FLAGS}
-#${GSQL_BUILD_SCONS} gsql_data_generator_release ${GSQL_BUILD_FLAGS}
-#${GSQL_BUILD_SCONS} poc_rest_release  ${GSQL_BUILD_FLAGS}
-#${GSQL_BUILD_SCONS} statushubcli_release ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} poc_gpe_release  ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} gse2_release     ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} generic_batch_loader_release ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} gsql_data_generator_release ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} poc_rest_release  ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} statushubcli_release ${GSQL_BUILD_FLAGS}
 # ${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS};cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
 # ${GSQL_BUILD_SCONS} graphdump_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
 # ${GSQL_BUILD_SCONS} batchdelta_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/batchdelta ${GSQL_PKG_HOME}/bin
