--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -21,8 +21,8 @@
 #----------------------------------------------------------------------------------------
 export GSQL_BUILD_SCONS="scons"
 export GSQL_BUILD_FLAGS="--CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES,__STDC_FORMAT_MACROS"
-Da=$(grep CPPDEFINES= ../config/pkg.config)
-Db=${Da/*=/}
+Da=$(grep CPPDEFINES= ../config/pkg.config | tail -1)
+Db=${Da/*CPPDEFINES=/}
 Dc=${Db%\\\"}
 Dd=${Dc//,/ }
 CFLAGS=
