--- a/config/proj.config
+++ b/config/proj.config
@@ -21,4 +21,4 @@
 - src/er             er          4.3 latest    src
 - src/gle            gle         4.3.1 latest    src
 - bigtest            bigtest     master latest    src
-- src/gpath          gpath       master latest  src
+- src/gpath          gpath       gpath_v1_stable latest  src
