[GSDK-37] check make filter error; link to jvm; rm headerfiles.txt

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -66,7 +66,9 @@ cp -r src/gpath/libs/*.jar ${GSQL_PKG_HOME}/bin
 
 
 # RESTPP related stuff
-cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean; make opt; cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
+cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean;
+make opt
+cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
 cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/endpoints
 
 
