--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -50,7 +50,9 @@ if [ ! -d ${GSQL_PKG_HOME}/bin ] ; then   mkdir -p ${GSQL_PKG_HOME}/bin ; fi
 #######################################################################################
 # RESTPP related stuff
 PARENT=$PWD
-cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean; make opt; cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
+cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean;
+make opt;
+cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
 cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/endpoints
 cd  ${PARENT}
 
