[GSDK-38] broken pipe

--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -29,7 +29,7 @@ CFLAGS=
 for d in $Dd ;do CFLAGS="$CFLAGS -D$d"; done
 
 # Add version info
-productVersion=$(./gworkspace.sh -c | head -1)
+productVersion=$(./gworkspace.sh -c 2>/dev/null | head -1)
 allVersion=$(< ./gsdk/VERSIONS.txt)
 otherVersion=$(echo "$allVersion" | sed -e '1d') 
 version="${productVersion}$otherVersion"
