--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -89,3 +89,6 @@ cp -RL ${GSQL_PROJ_HOME}/gsql/lib/*.so ${GSQL_PKG_HOME}/bin 2>/dev/null || :
 
 # tutorial
 cp -RL gsdk/tutorial ${GSQL_PKG_HOME}/ 2>/dev/null || :
+
+# Add visualization
+cp -r src/visualization ${GSQL_PKG_HOME}/visualization
