[GSDK-42] additional fix to vis in gdk

--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -91,4 +91,4 @@ cp -RL ${GSQL_PROJ_HOME}/gsql/lib/*.so ${GSQL_PKG_HOME}/bin 2>/dev/null || :
 cp -RL gsdk/tutorial ${GSQL_PKG_HOME}/ 2>/dev/null || :
 
 # Add visualization
-cp -r src/visualization ${GSQL_PKG_HOME}/visualization
+cp -r ${GSQL_PROJ_HOME}/src/visualization ${GSQL_PKG_HOME}/visualization
